<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.deepa.calculatorapp.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.375"
        android:background="@color/black"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <TextView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:background="@null"
            android:id="@+id/txtv_display_operator"
            android:textSize="27dp"
            android:textColor="@color/white"
            android:gravity="bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtv_display_calculation"
            android:textColor="@color/white"
            android:textSize="27dp"
            android:gravity="bottom|end"
            android:maxLines="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.125"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_7"
            android:id="@+id/btn_7"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_weight="0.25" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>

        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_8"
            android:id="@+id/btn_8"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_9"
            android:id="@+id/btn_9"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:gravity="center">

        <Button
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/btn_divide"
            android:textColor="@color/white"
            android:background="@drawable/divide" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.125"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_4"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:id="@+id/btn_4"
            android:layout_weight="0.25" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_5"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:id="@+id/btn_5"
            android:layout_weight="0.25" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_6"
            android:id="@+id/btn_6"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_weight="0.25" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_multiply"
            android:id="@+id/btn_multiply"
            android:textSize="27dp"
            android:textColor="@color/white"
            android:background="@color/orange" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.125"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_1"
            android:id="@+id/btn_1"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_weight="0.25" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_2"
            android:id="@+id/btn_2"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_weight="0.25" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_3"
            android:id="@+id/btn_3"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:layout_weight="0.25" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>

        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_minus"
            android:id="@+id/btn_minus"
            android:textSize="27dp"
            android:textColor="@color/white"
            android:background="@color/orange"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.125"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_0"
            android:id="@+id/btn_0"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:id="@+id/btn_clear"
            android:textColor="@color/black"
            android:background="@drawable/ic_arrow_back_black_24dp"
            />

        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_dot"
            android:id="@+id/btn_dot"
            android:textSize="27dp"
            android:textColor="@color/black"
            android:background="@color/grey"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/grey"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_plus"
            android:id="@+id/btn_plus"
            android:textSize="27dp"
            android:textColor="@color/white"
            android:background="@color/orange" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"/>
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.125">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_equals"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:id="@+id/btn_equals"
            />

    </LinearLayout>

</LinearLayout>
